[gd_scene load_steps=4 format=3 uid="uid://b5ewuf3g12nwk"]

[ext_resource type="Script" path="res://scripts/CanvasLayer.gd" id="1_m73bk"]
[ext_resource type="Script" path="res://scripts/menu.gd" id="3_pdhgd"]
[ext_resource type="Texture2D" uid="uid://ej76lvd2mjc1" path="res://images/icon.svg" id="4_0cinl"]

[node name="Main" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("1_m73bk")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(830, 294)
texture = ExtResource("4_0cinl")

[node name="Menu" type="Node2D" parent="CanvasLayer"]

[node name="Control" type="Control" parent="CanvasLayer/Menu"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_pdhgd")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Menu/Control"]
layout_mode = 0
offset_left = 41.0
offset_top = 38.0
offset_right = 259.0
offset_bottom = 259.0
scale = Vector2(2, 2)
theme_override_constants/separation = 50

[node name="Orientations" type="Button" parent="CanvasLayer/Menu/Control/VBoxContainer"]
layout_mode = 2
text = "Orientations"

[node name="Unit Concepts" type="Button" parent="CanvasLayer/Menu/Control/VBoxContainer"]
layout_mode = 2
text = "Unit Concepts"

[node name="Transferable Skills" type="Button" parent="CanvasLayer/Menu/Control/VBoxContainer"]
layout_mode = 2
text = "Transferable Skills"

[connection signal="pressed" from="CanvasLayer/Menu/Control/VBoxContainer/Orientations" to="CanvasLayer/Menu/Control" method="_on_orientations_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/Control/VBoxContainer/Unit Concepts" to="CanvasLayer/Menu/Control" method="_on_unit_concepts_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/Control/VBoxContainer/Transferable Skills" to="CanvasLayer/Menu/Control" method="_on_transferable_skills_pressed"]
